data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_730.wast
;; 1. **Test for Branching on False Condition within Loop**     - **Description**: Create a loop that includes a `br_if` instruction, which should branch only if a condition is false. The condition is evaluated based on a local variable that is set to 0.    - **Constraint Checked**: Ensures that the condition is properly evaluated as false and does not branch incorrectly.    - **Incorrect Condition Evaluation**: Checks if the `br_if` instruction branches incorrectly even when the condition is false.

(assert_invalid
  (module (func (local i32)
    (i32.const 0)
    (set_local 0)
    (loop (br_if 1 (get_local 0)))
  ))
  "invalid branch depth"
)